--- a/felinosDest.html
+++ b/felinosDest.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>Felinos Destacados</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./style.css">
@@ -46,61 +46,151 @@
   </header>
 
   <main>
-    <section class="text-center w-100 mx-auto text-center pt-5" id="especie">
+    <!-- Arrelgar tamaño de imagenes cuando más pequeño -->
+    <section class="text-center w-100 mx-auto text-center pt-5 pb-5" id="especie">
       <div class="container">
         <h1>Especies importantes e interesantes</h1>
-        <div class="row">
-          <div class="card col md-3 pt-4 ">
-            <img src="./linceiberico.jpeg" class="card-img" height="200px">
+        <div class="row row-cols-2">
+          <div class="card col md-3 pt-4 bg-transparent border-4 border-black">
+            <img src="./linceiberico.jpeg" class="card-img img-fluid" height="200px">
             <div class="card-body pb-3">
               <h2 class="card-title">Lince Ibérico</h2>
               <p class="card-text">El lince ibérico (Lynx pardinus) es una especie en peligro crítico, endémica de la
                 Península Ibérica. Amenazado por la pérdida de hábitat y la escasez de conejos, ha mostrado señales de
                 recuperación gracias a esfuerzos de conservación.</p>
+                <p class="card-text">Peligro de extinción: Crítico</p>
+                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#ejemploModal">
+                  Ver más
+                </button>
+                <div class="modal fade" id="ejemploModal" aria-labelledby="ejemploModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header mx-auto">
+                        <h1 class="modal-title fs-5" id="ejemploModalLabel">León Blanco</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        Machos: 150-250 kg
+                        Hembras: 120-180 kg
+                        <br>
+                        Naturaleza: 10-14 años
+                        Cautiverio: 15-20 años
+                      </div>
+                      <div class="modal-footer mx-auto">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
             </div>
           </div>
-          <div class="card col md-3 pt-4">
-            <img src="./panteranegra.jpg" class="card-img" height="200px">
+
+          <div class="card col md-3 pt-4 bg-transparent border-4 border-black">
+            <img src="./panteranegra.jpg" class="card-img img-fluid" height="200px">
             <div class="card-body pb-3">
               <h2 class="card-title">Pantera Negra</h2>
               <p class="card-text">La pantera negra es una variación melánica del leopardo (Panthera pardus) o jaguar
                 (Panthera onca), con pelaje negro debido a una mutación genética. Son felinos ágiles, poderosos y
                 cazadores nocturnos.</p>
                 <p class="card-text">Peligro de extinción: Casi Amenazado/Vulnerable</p>
+                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#ejemploModal">
+                  Ver más
+                </button>
+                <div class="modal fade" id="ejemploModal" aria-labelledby="ejemploModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header mx-auto">
+                        <h1 class="modal-title fs-5" id="ejemploModalLabel">León Blanco</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        Machos: 150-250 kg
+                        Hembras: 120-180 kg
+                        <br>
+                        Naturaleza: 10-14 años
+                        Cautiverio: 15-20 años
+                      </div>
+                      <div class="modal-footer mx-auto">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
             </div>
           </div>
-          <div class="card col md-3 pt-4">
-            <img src="./leopardoamur.jpg" class="card-img" height="200px">
+
+          <div class="card col md-3 pt-4 bg-transparent border-4 border-black">
+            <img src="./leopardoamur.jpg" class="card-img img-fluid" height="200px">
             <div class="card-body pb-3">
               <h2 class="card-title">Leopardo Amur</h2>
               <p class="card-text">El leopardo de Amur (Panthera pardus orientalis) es una subespecie en peligro, con
                 menos de 100 individuos en libertad. Habita en el este de Rusia y noreste de China, y enfrenta amenazas
                 como la caza furtiva y la pérdida de hábitat. Es un cazador solitario y nocturno.</p>
                 <p>Peligro de extinción: Crítico</p>
+                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#ejemploModal">
+                  Ver más
+                </button>
+                <div class="modal fade" id="ejemploModal" aria-labelledby="ejemploModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header mx-auto">
+                        <h1 class="modal-title fs-5" id="ejemploModalLabel">León Blanco</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        Machos: 150-250 kg
+                        Hembras: 120-180 kg
+                        <br>
+                        Naturaleza: 10-14 años
+                        Cautiverio: 15-20 años
+                      </div>
+                      <div class="modal-footer mx-auto">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
             </div>
           </div>
-          <div class="card col md-3 pt-4">
-            <img src="./leonblanco.jpg" class="card-img" height="200px">
+
+          <div class="card col pt-4 bg-transparent border-4 border-black ">
+            <img src="./leonblanco.jpg" class="card-img img-fluid" height="200px">
             <div class="card-body pb-3">
               <h2 class="card-title">León Blanco</h2>
               <p class="card-text">El león blanco (Panthera Leo) es una rara variante del león africano con pelaje
                 blanco debido a una mutación genética. Su población es muy limitada y se encuentra principalmente en
                 reservas y zoológicos. Es un símbolo de belleza y poder.</p>
                 <p>Peligro de extinción: Vulnerable</p>
+                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#ejemploModal">
+                  Ver más
+                </button>
+                <div class="modal fade" id="ejemploModal" aria-labelledby="ejemploModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header mx-auto">
+                        <h1 class="modal-title fs-5" id="ejemploModalLabel">León Blanco</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        Machos: 150-250 kg
+                        Hembras: 120-180 kg
+                        <br>
+                        Naturaleza: 10-14 años
+                        Cautiverio: 15-20 años
+                      </div>
+                      <div class="modal-footer mx-auto">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="card col md-3 pt-4">
-          <img src="" alt="">
-          <h2 class="card-title">Lorem ipsum dolor sit amet.</h2>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis dolor ipsam
-            molestias impedit
-            aliquam nisi debitis vel, aut rem recusandae sint praesentium fuga sunt voluptatum corporis nulla aperiam!
-            Nobis, molestias.</p>
-        </div>
-      </div>
+    </section>
+    <section>
+      <div></div>
     </section>
   </main>
 
@@ -117,9 +207,9 @@
         <div class="col-md-4 mb-4">
           <h5 class="mb-3">Enlaces</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white text-decoration-none">Inicio</a></li>
-            <li><a href="#" class="text-white text-decoration-none">Felinos Destacados</a></li>
-            <li><a href="#" class="text-white text-decoration-none">conservación</a></li>
+            <li><a href="./index.html" class="text-white text-decoration-none">Inicio</a></li>
+            <li><a href="./felinosDest.html" class="text-white text-decoration-none">Felinos Destacados</a></li>
+            <li><a href="./conservacion.html" class="text-white text-decoration-none">Conservación</a></li>
             <!-- <li><a href="#" class="text-white text-decoration-none">Equipo de Producción</a></li> -->
           </ul>
         </div>
