--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </nav>
   </header>
   <main>
-    <section class="hero bg-dark text-white text-center fondo"
+    <section class="hero bg-dark text-white text-center fondo "
       style="background-image: url('./panteranegra.jpg'); background-size: cover; background-position: center;">
       <div class="container">
         <h1 class="display-4">Grandes Felinos</h1>
@@ -56,25 +56,25 @@
         </div>
       </div>
     </section>
-    
-    <section class="text-center pb-4">
+
+    <section class="imagen-ini text-center pb-4">
       <div class="container pt-4">
         <h2 class="mb-4">Explora un mundo salvaje</h2>
         <p class="mb-5">Sumérgete en los hábitats de los grandes felinos y descubre sus historias.</p>
         <div class="row">
           <div class="col-md-4">
             <img src="./sabana_16x9.png" class="img-fluid" alt="">
-            <h5>Hábitats únicos</h5>
+            <h3>Hábitats únicos</h3>
             <p>Desde la selva tropical hasta la sabana africana.</p>
           </div>
           <div class="col-md-4">
             <img src="./comportamiento_16x9.png" class="img-fluid height" alt="">
-            <h5 class="pt-4">Comportamiento fascinante</h5>
+            <h3 class="pt-4">Comportamiento fascinante</h3>
             <p>Conoce sus costumbres y su papel en el ecosistema.</p>
           </div>
           <div class="col-md-4">
             <img src="./proteccion_16x9.png" class="img-fluid" alt="">
-            <h5 class="pt-2">Protección y futuro</h5>
+            <h3 class="pt-2">Protección y futuro</h3>
             <p>Descubre los esfuerzos por conservarlos.</p>
           </div>
         </div>
@@ -82,50 +82,59 @@
     </section>
 
     <section class="gallery py-5">
-      <div id="carouselExampleCaptions" class="carousel slide">
+      <div id="carrusel" class="carousel slide w-50 mx-auto">
         <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-            aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-            aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
-            aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carrusel" data-bs-slide-to="0" class="active" aria-current="true"
+            aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carrusel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carrusel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carrusel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carrusel" data-bs-slide-to="4" aria-label="Slide 5"></button>
+          <button type="button" data-bs-target="#carrusel" data-bs-slide-to="5" aria-label="Slide 6"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./leonblanco.jpg" class="d-block m-auto" alt="...">
+            <img src="./leonblanco.jpg" class="d-block m-auto img-fluid" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5 class="text-black">León Blanco</h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./leopardoamur.jpg" class="d-block m-auto" alt="...">
+            <img src="./leopardoamur.jpg" class="d-block m-auto img-fluid" alt="...">
             <div class="carousel-caption d-none d-md-block py-1">
               <h5 class="text-black">Leopardo Amur</h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./linceiberico.jpeg" class="d-block m-auto" alt="...">
+            <img src="./linceiberico.jpeg" class="d-block m-auto img-fluid" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Lince Iberico</h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./tigremaltes.jpg" class="d-block m-auto" alt="...">
+            <img src="./tigremaltes.jpg" class="d-block m-aut img-fluid" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Tigre maltes</h5>
+              <h5>Tigre Maltes</h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./caracal.webp" class="d-block m-auto img-fluid" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Caracal</h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./leopardonieves.png" class="d-block m-auto img-fluid" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="text-black">Leopardo de las Nieves</h5>
             </div>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carrusel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon bg-dark" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carrusel" data-bs-slide="next">
           <span class="carousel-control-next-icon bg-dark" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
@@ -146,9 +155,9 @@
         <div class="col-md-4 mb-4">
           <h5 class="mb-3">Enlaces</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white text-decoration-none">Inicio</a></li>
-            <li><a href="#" class="text-white text-decoration-none">Felinos Destacados</a></li>
-            <li><a href="#" class="text-white text-decoration-none">conservación</a></li>
+            <li><a href="./index.html" class="text-white text-decoration-none">Inicio</a></li>
+            <li><a href="./felinosDest.html" class="text-white text-decoration-none">Felinos Destacados</a></li>
+            <li><a href="./conservacion.html" class="text-white text-decoration-none">Conservación</a></li>
             <!-- <li><a href="#" class="text-white text-decoration-none">Equipo de Producción</a></li> -->
           </ul>
         </div>
@@ -179,4 +188,5 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 </body>
+
 </html>
